--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM9WWLMuYRdYALseCLiOaj0",
+      "authorship_tag": "ABX9TyOq7PwgsO4HQlcz2TRrIHz7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,23 +128,30 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0913a05f-a736-4901-e7e9-88ffbc862852"
+        "outputId": "286f4d9c-b6aa-426a-9891-4f9b5ed6020b"
       },
       "source": [
+        "# SOLUTION 1\n",
+        "\n",
         "number=int(input(\"enter any number   \"))\n",
         "if(number>0):\n",
         "  print(\"Given number is possitive\")\n",
         "elif(number<0):\n",
         "  print(\"Given number is negative\")\n",
         "else:\n",
-        "  print(\"Given number is neither possitive nor negative\")    "
+        "  print(\"Given number is neither possitive nor negative\")\n",
+        "\n",
+        "\n",
+        "#SOLUTION 2 \n",
+        "# ans=\"possitive\" if int(input(\"enter any number   \"))>0 else \"negative\"\n",
+        "# print(ans)  "
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "enter any number   -1\n",
+            "enter any number   -7\n",
             "Given number is negative\n"
           ],
           "name": "stdout"
@@ -170,9 +177,22 @@
         "outputId": "10908ff1-e1bf-4db3-8c32-31d4fa5e8574"
       },
       "source": [
-        "a,b,c=input().split()\n",
-        "largestNumber=a if a>b and a>c else b if b>c else c\n",
-        "print(largestNumber)"
+        "# solutions 1\n",
+        "a=int(input())\n",
+        "b=int(input())\n",
+        "c=int(input())\n",
+        "if a>b and a>c:\n",
+        "  print(a)\n",
+        "elif b>a and b>c:\n",
+        "  print(b)  \n",
+        "else:\n",
+        "  print(c)\n",
+        "\n",
+        "  \n",
+        "# solution 2\n",
+        "# a,b,c=input().split()\n",
+        "# largestNumber=a if a>b and a>c else b if b>c else c\n",
+        "# print(largestNumber)"
       ],
       "execution_count": null,
       "outputs": [
@@ -203,16 +223,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "475c85f2-b59b-436c-df2f-fcb8247a8168"
+        "outputId": "8c9ba0fb-ef45-493c-e8e8-9b3565fc3356"
       },
       "source": [
+        "# solution 1\n",
         "evenSum=0\n",
         "for i in range(1,51):\n",
-        "  if (i%2==-0):\n",
+        "  if (i%2==0):\n",
         "    evenSum+=i\n",
-        "print(evenSum)    "
+        "print(evenSum)\n",
+        "\n",
+        "#solution 2\n",
+        "# from functools import *\n",
+        "# print(reduce(lambda a,b:a+b,[x for x in range(1,51) if x%2==0]))"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,22 +329,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7c1cc785-3c7b-43fe-964b-0026c8b9d678"
+        "outputId": "0f65d9ef-b7ee-4fe5-dfa8-f33590c90eba"
       },
       "source": [
         "a,b=input().split()\n",
+        "print(a,b)\n",
         "a,b=b,a\n",
-        "print(a)\n",
-        "print(b)"
+        "print(a,b)"
       ],
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "5 4\n",
-            "4\n",
-            "5\n"
+            "2 5\n",
+            "2 5\n",
+            "5\n",
+            "5 2\n"
           ],
           "name": "stdout"
         }
@@ -341,7 +367,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7f76f165-1e34-4328-8d3b-9764051c4ab2"
+        "outputId": "962eeca5-0baa-4adb-db60-aa7674208c04"
       },
       "source": [
         "def add_sub(a,b):\n",
@@ -349,16 +375,14 @@
         "  sub=a-b\n",
         "  return sum,sub\n",
         "sum,sub=add_sub(4,2)\n",
-        "print(sum)\n",
-        "print(sub)"
+        "print(sum,sub)"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "6\n",
-            "2\n"
+            "6 2\n"
           ],
           "name": "stdout"
         }
@@ -380,13 +404,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3d2a6b00-d7dc-4fba-8eeb-faacd7e6bb24"
+        "outputId": "3556b430-5d6d-4b9f-c790-20901a51e1be"
       },
       "source": [
         "adder=lambda a,b :a+b\n",
         "adder(2,4)"
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -398,7 +422,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 38
         }
       ]
     },
@@ -897,51 +921,54 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9b444b18-951c-4433-b366-4bd607c41458"
+        "outputId": "8ccb7231-b594-4c9d-ddb5-b88462684dba"
       },
       "source": [
-        "conc=()\n",
+        "conc_names=\"\"\n",
+        "conc_ages=\"\"\n",
+        "conc_address=\"\"\n",
+        "conc_college=\"\"\n",
+        "\n",
         "for i in range(int(input(\"enter the no of students      \"))):\n",
-        "  print()\n",
         "  name=input(\"enter the name of student no     \")\n",
         "  age=input(\"enter the age       \")\n",
-        "  adress=input(\"enter the  adress      \" )\n",
-        "  college=input(\"enter the fdgdllege     \")\n",
-        "  print()\n",
-        "  t=name,age,adress,college\n",
-        "  print(t)\n",
-        "  conc+=t\n",
-        "print()  \n",
-        "print(conc)\n"
+        "  address=input(\"enter the  address      \" )\n",
+        "  college=input(\"enter the college     \")\n",
+        "  conc_names+=name\n",
+        "  conc_ages+=age\n",
+        "  conc_address+=address\n",
+        "  conc_colleges+=college\n",
+        "\n",
+        "print(\"/n\")  \n",
+        "print(conc_names)\n",
+        "print(conc_ages)\n",
+        "print(conc_address)\n",
+        "print(conc_colleges)\n",
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "enter the no of students      3\n",
-            "\n",
-            "enter the name of student no     fgdfdg\n",
-            "enter the age       dfdgdfg\n",
-            "enter the  adress      ddgdfg\n",
-            "enter the college     dfgdfgd\n",
-            "\n",
-            "('fgdfdg', 'dfdgdfg', 'ddgdfg', 'dfgdfgd')\n",
-            "\n",
-            "enter the name of student no     dfgdf\n",
-            "enter the age       dfgdfgdfg\n",
-            "enter the  adress      dfgdfgdg\n",
-            "enter the college     dfgdfgdfg\n",
-            "\n",
-            "('dfgdf', 'dfgdfgdfg', 'dfgdfgdg', 'dfgdfgdfg')\n",
-            "\n",
-            "enter the name of student no     fgdfgdf\n",
-            "enter the age       dfgdfgd\n",
-            "enter the  adress      dgdgdfg\n",
-            "enter the college     dfgdfg\n",
-            "\n",
-            "('fgdfgdf', 'dfgdfgd', 'dgdgdfg', 'dfgdfg')\n",
-            "('fgdfdg', 'dfdgdfg', 'ddgdfg', 'dfgdfgd', 'dfgdf', 'dfgdfgdfg', 'dfgdfgdg', 'dfgdfgdfg', 'fgdfgdf', 'dfgdfgd', 'dgdgdfg', 'dfgdfg')\n"
+            "enter the name of student no     student1\n",
+            "enter the age       18\n",
+            "enter the  address      address1\n",
+            "enter the college     college1\n",
+            "enter the name of student no     student2\n",
+            "enter the age       18\n",
+            "enter the  address      address2\n",
+            "enter the college     college2\n",
+            "enter the name of student no     student3\n",
+            "enter the age       18\n",
+            "enter the  address      address\n",
+            "enter the college     college3\n",
+            "/n\n",
+            "student1student2student3\n",
+            "181818\n",
+            "address1address2address\n",
+            "dsgssdgcollege1college2college3college1college2college3\n"
           ],
           "name": "stdout"
         }
@@ -964,10 +991,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jOfFNtR8sB3K",
-        "outputId": "68e15679-f4ac-4fdd-c7ab-1e7255087ddc"
+        "outputId": "73a32915-e6a5-423f-db6a-7f290881cc6b"
       },
       "source": [
         "strn=\"aaaaaabbbbcccc\"\n",
+        "# solution 1 using tuples \n",
         "temp=strn[0]\n",
         "count=0\n",
         "l=[]\n",
@@ -982,14 +1010,24 @@
         "    count+=1\n",
         "  if (i==len(strn)-1):\n",
         "    l.append((temp,count))    \n",
-        "print(l)"
+        "print(l)\n",
+        "\n",
+        "# solution 2 using dictionary \n",
+        "dictt={}\n",
+        "for x in strn:\n",
+        "  if x in dictt.keys():\n",
+        "    dictt[x]+=1\n",
+        "  else:\n",
+        "    dictt[x]=1 \n",
+        "print(dictt)    \n"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[('a', 6), ('b', 4), ('c', 4)]\n"
+            "[('a', 6), ('b', 4), ('c', 4)]\n",
+            "{'a': 6, 'b': 4, 'c': 4}\n"
           ],
           "name": "stdout"
         }
@@ -1065,23 +1103,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b5d42d7a-683e-477b-a917-81aa987e3f7d"
+        "outputId": "91136212-c14d-435b-f376-393b7ed10309"
       },
       "source": [
         "s1=\"dddddddddeefff\"\n",
         "s2=\"ddggfffffffff\"\n",
         "s=set()\n",
         "for i in s1:\n",
-        "  if (i in s1):\n",
+        "  if (i in s2):\n",
         "    s.add(i)\n",
         "print(s)"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "{'f', 'e', 'd'}\n"
+            "{'f', 'd'}\n"
           ],
           "name": "stdout"
         }
