--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOq7PwgsO4HQlcz2TRrIHz7",
+      "authorship_tag": "ABX9TyPmQJNXLGYSks41RdO/rQby",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -146,7 +146,7 @@
         "# ans=\"possitive\" if int(input(\"enter any number   \"))>0 else \"negative\"\n",
         "# print(ans)  "
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +237,7 @@
         "# from functools import *\n",
         "# print(reduce(lambda a,b:a+b,[x for x in range(1,51) if x%2==0]))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,7 +337,7 @@
         "a,b=b,a\n",
         "print(a,b)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,7 +377,7 @@
         "sum,sub=add_sub(4,2)\n",
         "print(sum,sub)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -404,25 +404,45 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3556b430-5d6d-4b9f-c790-20901a51e1be"
+        "outputId": "f2688170-725f-4541-ee7b-c2a3dcd6909d"
       },
       "source": [
-        "adder=lambda a,b :a+b\n",
-        "adder(2,4)"
+        "A = 1\n",
+        "B = 0\n",
+        "C = 1\n",
+        "\n",
+        "# half adder\n",
+        "# sum=a xor b\n",
+        "# carry=a and b\n",
+        "\n",
+        "\n",
+        "# full adder \n",
+        "# sum=a xor b xor c\n",
+        "# carry=a and b+ c and(a xor b)\n",
+        "\n",
+        "\n",
+        "half_adder_sum = lambda a, b : a ^ b\n",
+        "half_adder_carry = lambda a, b : a & b\n",
+        "full_adder_sum = lambda a, b, c : (a ^ b) ^ c\n",
+        "full_adder_carry = lambda a, b, c : (a& b)+c& (a ^b)\n",
+        "\n",
+        "\n",
+        "print(half_adder_sum(A, B))\n",
+        "print(half_adder_carry(A, B))\n",
+        "print(full_adder_sum(A,B,C))\n",
+        "print(full_adder_carry(A,B,C))"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "6"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 38
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "1\n",
+            "0\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -946,7 +966,7 @@
         "print(conc_colleges)\n",
         "\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1021,7 +1041,7 @@
         "    dictt[x]=1 \n",
         "print(dictt)    \n"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1114,7 +1134,7 @@
         "    s.add(i)\n",
         "print(s)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
