--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPmQJNXLGYSks41RdO/rQby",
+      "authorship_tag": "ABX9TyNO2fhg+kb6nRt5kxO07tv1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -174,32 +174,32 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "10908ff1-e1bf-4db3-8c32-31d4fa5e8574"
+        "outputId": "1f1573b4-ed23-4910-86d4-20465a4c4661"
       },
       "source": [
         "# solutions 1\n",
-        "a=int(input())\n",
-        "b=int(input())\n",
-        "c=int(input())\n",
-        "if a>b and a>c:\n",
-        "  print(a)\n",
-        "elif b>a and b>c:\n",
-        "  print(b)  \n",
-        "else:\n",
-        "  print(c)\n",
+        "# a=int(input())\n",
+        "# b=int(input())\n",
+        "# c=int(input())\n",
+        "# if a>b and a>c:\n",
+        "#   print(a)\n",
+        "# elif b>a and b>c:\n",
+        "#   print(b)  \n",
+        "# else:\n",
+        "#   print(c)\n",
         "\n",
         "  \n",
         "# solution 2\n",
-        "# a,b,c=input().split()\n",
-        "# largestNumber=a if a>b and a>c else b if b>c else c\n",
-        "# print(largestNumber)"
+        "a,b,c=input().split()\n",
+        "largestNumber=a if a>b and a>c else b if b>c else c\n",
+        "print(largestNumber)"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2 5 4\n",
+            "5 1 4\n",
             "5\n"
           ],
           "name": "stdout"
@@ -223,19 +223,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8c9ba0fb-ef45-493c-e8e8-9b3565fc3356"
+        "outputId": "8fe16e76-7760-41e6-ce10-96d260130aa5"
       },
       "source": [
         "# solution 1\n",
-        "evenSum=0\n",
-        "for i in range(1,51):\n",
-        "  if (i%2==0):\n",
-        "    evenSum+=i\n",
-        "print(evenSum)\n",
+        "# evenSum=0\n",
+        "# for i in range(1,51):\n",
+        "#   if (i%2==0):\n",
+        "#     evenSum+=i\n",
+        "# print(evenSum)\n",
         "\n",
         "#solution 2\n",
-        "# from functools import *\n",
-        "# print(reduce(lambda a,b:a+b,[x for x in range(1,51) if x%2==0]))"
+        "from functools import *\n",
+        "print(reduce(lambda a,b:a+b,[x for x in range(1,51) if x%2==0]))"
       ],
       "execution_count": null,
       "outputs": [
@@ -264,11 +264,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c92623b2-0275-4a97-f219-fdd3727c6ab9"
+        "outputId": "4ce1b287-5a0f-43f8-8801-b3d8e74ce8b7"
       },
       "source": [
         "from math import *\n",
         "def checkIfPrime(num):\n",
+        "  \n",
         "  for i in range(2,int(sqrt(num))+1):\n",
         "    if num%i==0:\n",
         "      break\n",
@@ -329,12 +330,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0f65d9ef-b7ee-4fe5-dfa8-f33590c90eba"
+        "outputId": "a5e19180-c3a7-463d-9333-eab176d2ecc8"
       },
       "source": [
         "a,b=input().split()\n",
+        "print(\"before\")\n",
         "print(a,b)\n",
         "a,b=b,a\n",
+        "print(\"after\")\n",
         "print(a,b)"
       ],
       "execution_count": null,
@@ -342,10 +345,11 @@
         {
           "output_type": "stream",
           "text": [
-            "2 5\n",
-            "2 5\n",
-            "5\n",
-            "5 2\n"
+            "1 9\n",
+            "before\n",
+            "1 9\n",
+            "after\n",
+            "9 1\n"
           ],
           "name": "stdout"
         }
@@ -404,18 +408,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cd9b1fec-8ea5-44e4-deff-388fa7ec7857"
+        "outputId": "228b44d1-403a-4192-8c6b-e8d42d068996"
       },
       "source": [
-        "A = 1\n",
-        "B = 0\n",
+        "A = 0\n",
+        "B = 1\n",
         "C = 1\n",
         "\n",
         "# half adder\n",
         "# sum=a xor b\n",
         "# carry=a and b\n",
         "\n",
-        "\n",
+        "# [int(x) for x in input().split()]\n",
         "# full adder \n",
         "# sum=a xor b xor c\n",
         "# carry=a and b+ c and(a xor b)\n",
@@ -424,7 +428,7 @@
         "half_adder_sum = lambda a, b : a ^ b\n",
         "half_adder_carry = lambda a, b : a & b\n",
         "full_adder_sum = lambda a, b, c : (a ^ b) ^ c\n",
-        "full_adder_carry = lambda a, b, c : (a& b)+c& (a ^b)\n",
+        "full_adder_carry = lambda a, b, c : (a& b)+(c& (a ^b))\n",
         "\n",
         "\n",
         "print(half_adder_sum(A, B))\n",
@@ -432,7 +436,7 @@
         "print(full_adder_sum(A,B,C))\n",
         "print(full_adder_carry(A,B,C))"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1757,23 +1761,23 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "iRqaiu6SvWOF"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "sVkb_92XvfFM"
       },
       "source": [
         "ADDITIONAL PROGRAMS"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zH9214uuQztN"
+      },
+      "source": [
+        "For GUI codes visit my ohter repo!!!\n",
+        "\n",
+        "https://github.com/naveenkarthikreddy/GUI-Tkinter"
       ]
     },
     {
@@ -1972,13 +1976,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZzUMNpY0wDfJ"
+        "id": "ZzUMNpY0wDfJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5112c32b-eb8d-4ae8-8efe-0c17b48bb861"
       },
       "source": [
         ""
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter the start of range: 1\n",
+            "Enter the end of range: 50\n",
+            "650\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
