--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNO2fhg+kb6nRt5kxO07tv1",
+      "authorship_tag": "ABX9TyOCmwa/ALYmsuofFbHyDiod",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -692,29 +692,42 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0c75c15a-457c-4a2e-e6bd-7797afe9ae5f"
+        "outputId": "4c5ea500-26d4-4e25-adab-2b6cc6420145"
       },
       "source": [
         "def anagram(s1,s2):\n",
         "  s1=sorted(s1.lower())\n",
         "  s2=sorted(s2.lower())\n",
-        "  return s1==s2\n",
-        "# anagram(\"piG\",\"g i p\")\n",
-        "anagram(\"pig\",\"gip\")"
+        "\n",
+        "  l1=[]\n",
+        "  l2=[]\n",
+        "  for i in s2:\n",
+        "    if i==\" \":\n",
+        "      pass\n",
+        "    else:\n",
+        "      l1.append(i)\n",
+        "      \n",
+        "  for i in s1:\n",
+        "    if i==\" \":\n",
+        "      pass\n",
+        "    else:\n",
+        "      l2.append(i)\n",
+        "  return l1==l2\n",
+        "\n",
+        "a=input()\n",
+        "b=input()\n",
+        "print(anagram(a,b))"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 25
+          "output_type": "stream",
+          "text": [
+            "p   i   g\n",
+            "g ip\n",
+            "True\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
