--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOCmwa/ALYmsuofFbHyDiod",
+      "authorship_tag": "ABX9TyOeSsuUk8h+6DRBUWqHPjfo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -748,27 +748,36 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9d8ad65d-96b5-4254-e0e8-52b101b4e351"
+        "outputId": "c2035a38-852f-4dd4-bb8d-0e3b0256997d"
       },
       "source": [
-        "import re\n",
+        "# import re\n",
         "\n",
-        "Str = input(\"enter the string   \")\n",
+        "# Str = input(\"enter the string   \")\n",
+        "# subStr=input(\"enter the substring   \")\n",
+        "# x = re.findall(subStr, Str)\n",
+        "# if(len(x)!=0):\n",
+        "#   print(\"substring is present in a given string \")\n",
+        "# else:\n",
+        "#   print(\"not here\")    \n",
+        "\n",
+        "\n",
+        "strr = input(\"enter the string   \")\n",
         "subStr=input(\"enter the substring   \")\n",
-        "x = re.findall(subStr, Str)\n",
-        "if(len(x)!=0):\n",
-        "  print(\"substring is present in a given string \")\n",
+        "if (strr.count(subStr)==0):\n",
+        "  print(\"not here\")\n",
         "else:\n",
-        "  print(\"not here\")    \n"
+        "  print(\"present\")  \n",
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "enter the string   this is python regular expressions\n",
-            "enter the substring   regular\n",
-            "substring is present in a given string \n"
+            "enter the string   hello this is\n",
+            "enter the substring   is\n",
+            "present\n"
           ],
           "name": "stdout"
         }
