--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOeSsuUk8h+6DRBUWqHPjfo",
+      "authorship_tag": "ABX9TyOXw3Q8L3bX/V2XfTAtp/pI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -692,39 +692,33 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4c5ea500-26d4-4e25-adab-2b6cc6420145"
+        "outputId": "713f716b-98f9-470a-d53d-52b45089449a"
       },
       "source": [
         "def anagram(s1,s2):\n",
         "  s1=sorted(s1.lower())\n",
         "  s2=sorted(s2.lower())\n",
-        "\n",
         "  l1=[]\n",
         "  l2=[]\n",
-        "  for i in s2:\n",
-        "    if i==\" \":\n",
-        "      pass\n",
-        "    else:\n",
-        "      l1.append(i)\n",
-        "      \n",
         "  for i in s1:\n",
-        "    if i==\" \":\n",
-        "      pass\n",
-        "    else:\n",
-        "      l2.append(i)\n",
-        "  return l1==l2\n",
-        "\n",
+        "    if i!=\" \":\n",
+        "      l1.append(i)\n",
+        "  for i in s2:\n",
+        "    if i!=\" \":\n",
+        "      l2.append(i)  \n",
+        "  return l1==l2      \n",
+        "  \n",
         "a=input()\n",
         "b=input()\n",
         "print(anagram(a,b))"
       ],
-      "execution_count": 31,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "p   i   g\n",
-            "g ip\n",
+            "gvp\n",
+            "p   vg\n",
             "True\n"
           ],
           "name": "stdout"
