--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOXw3Q8L3bX/V2XfTAtp/pI",
+      "authorship_tag": "ABX9TyMC8HgHckrglQJlE9JK/IeY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -564,12 +564,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1eaa350c-3c05-4f5c-ec8a-3fff0c9c2c8e"
+        "outputId": "03e80a5f-2f12-41aa-ff78-9be6c1b06ec0"
       },
       "source": [
         "def tables(n,limit):\n",
         "  for i in range(1,limit+1):\n",
-        "    print(n,\"*\",i,\"=\",n*i)\n",
+        "    print(n,\"✖\",i,\"=\",n*i)\n",
         "  print()  \n",
         "\n",
         "NoOfTimes=10\n",
@@ -582,38 +582,38 @@
         {
           "output_type": "stream",
           "text": [
-            "8 * 1 = 8\n",
-            "8 * 2 = 16\n",
-            "8 * 3 = 24\n",
-            "8 * 4 = 32\n",
-            "8 * 5 = 40\n",
-            "8 * 6 = 48\n",
-            "8 * 7 = 56\n",
-            "8 * 8 = 64\n",
-            "8 * 9 = 72\n",
-            "8 * 10 = 80\n",
+            "8 ✖ 1 = 8\n",
+            "8 ✖ 2 = 16\n",
+            "8 ✖ 3 = 24\n",
+            "8 ✖ 4 = 32\n",
+            "8 ✖ 5 = 40\n",
+            "8 ✖ 6 = 48\n",
+            "8 ✖ 7 = 56\n",
+            "8 ✖ 8 = 64\n",
+            "8 ✖ 9 = 72\n",
+            "8 ✖ 10 = 80\n",
             "\n",
-            "15 * 1 = 15\n",
-            "15 * 2 = 30\n",
-            "15 * 3 = 45\n",
-            "15 * 4 = 60\n",
-            "15 * 5 = 75\n",
-            "15 * 6 = 90\n",
-            "15 * 7 = 105\n",
-            "15 * 8 = 120\n",
-            "15 * 9 = 135\n",
-            "15 * 10 = 150\n",
+            "15 ✖ 1 = 15\n",
+            "15 ✖ 2 = 30\n",
+            "15 ✖ 3 = 45\n",
+            "15 ✖ 4 = 60\n",
+            "15 ✖ 5 = 75\n",
+            "15 ✖ 6 = 90\n",
+            "15 ✖ 7 = 105\n",
+            "15 ✖ 8 = 120\n",
+            "15 ✖ 9 = 135\n",
+            "15 ✖ 10 = 150\n",
             "\n",
-            "69 * 1 = 69\n",
-            "69 * 2 = 138\n",
-            "69 * 3 = 207\n",
-            "69 * 4 = 276\n",
-            "69 * 5 = 345\n",
-            "69 * 6 = 414\n",
-            "69 * 7 = 483\n",
-            "69 * 8 = 552\n",
-            "69 * 9 = 621\n",
-            "69 * 10 = 690\n",
+            "69 ✖ 1 = 69\n",
+            "69 ✖ 2 = 138\n",
+            "69 ✖ 3 = 207\n",
+            "69 ✖ 4 = 276\n",
+            "69 ✖ 5 = 345\n",
+            "69 ✖ 6 = 414\n",
+            "69 ✖ 7 = 483\n",
+            "69 ✖ 8 = 552\n",
+            "69 ✖ 9 = 621\n",
+            "69 ✖ 10 = 690\n",
             "\n"
           ],
           "name": "stdout"
@@ -712,7 +712,7 @@
         "b=input()\n",
         "print(anagram(a,b))"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -764,7 +764,7 @@
         "  print(\"present\")  \n",
         "\n"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -927,6 +927,44 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_s4GBv9cHaOP",
+        "outputId": "ef28bce3-660e-443b-a22c-b4f9d837f19b"
+      },
+      "source": [
+        "l1=[4,22354,345,23423,34534523,4]\n",
+        "l2=[1,2,3,4,5]\n",
+        "l3=[]\n",
+        "i=0\n",
+        "j=0\n",
+        "k=0\n",
+        "while i<len(l1) and j<len(l2):\n",
+        "  if (k%2!=0):\n",
+        "    l3.append(l1[i])\n",
+        "    i+1\n",
+        "  else:\n",
+        "    l3.append(l2[j])\n",
+        "    j+=1\n",
+        "  k+=1 \n",
+        "\n",
+        "print(l3)   \n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 4, 2, 4, 3, 4, 4, 4, 5]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "U3Otfl8IrS5A"
@@ -1031,43 +1069,73 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jOfFNtR8sB3K",
-        "outputId": "73a32915-e6a5-423f-db6a-7f290881cc6b"
+        "outputId": "c18db2e5-9bd2-446b-85cb-7a50a1450b90"
       },
       "source": [
-        "strn=\"aaaaaabbbbcccc\"\n",
+        "strn=\"aaaabbbcccccaaaaabbbcccca\"\n",
         "# solution 1 using tuples \n",
-        "temp=strn[0]\n",
-        "count=0\n",
-        "l=[]\n",
-        "for i in range(len(strn)):\n",
-        "  if strn[i]==temp:\n",
-        "    count+=1\n",
-        "    temp=strn[i]\n",
-        "  else:\n",
-        "    l.append((temp,count))\n",
-        "    count=0\n",
-        "    temp=strn[i]\n",
-        "    count+=1\n",
-        "  if (i==len(strn)-1):\n",
-        "    l.append((temp,count))    \n",
-        "print(l)\n",
         "\n",
-        "# solution 2 using dictionary \n",
-        "dictt={}\n",
-        "for x in strn:\n",
-        "  if x in dictt.keys():\n",
-        "    dictt[x]+=1\n",
-        "  else:\n",
-        "    dictt[x]=1 \n",
-        "print(dictt)    \n"
+        "\n",
+        "# temp=strn[0]\n",
+        "# count=0\n",
+        "# l=[]\n",
+        "# for i in range(len(strn)):\n",
+        "#   if strn[i]==temp:\n",
+        "#     count+=1\n",
+        "#     temp=strn[i]\n",
+        "#   else:\n",
+        "#     l.append((temp,count))\n",
+        "#     count=0\n",
+        "#     temp=strn[i]\n",
+        "#     count+=1\n",
+        "#   if (i==len(strn)-1):\n",
+        "#     l.append((temp,count))    \n",
+        "# print(l)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# # solution 2 using dictionary \n",
+        "\n",
+        "\n",
+        "# dictt={}\n",
+        "# for x in strn:\n",
+        "#   if x in dictt.keys():\n",
+        "#     dictt[x]+=1\n",
+        "#   else:\n",
+        "#     dictt[x]=1 \n",
+        "# print(dictt)    \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# solution 3 using list\n",
+        "\n",
+        "l = []\n",
+        "for i in strn:\n",
+        "  flag = False\n",
+        "  for x in range(len(l)):\n",
+        "\n",
+        "    if i in l[x][0]:\n",
+        "      #print(\"x = \",x)\n",
+        "      l[x][1] += 1\n",
+        "      flag = True\n",
+        "  if not flag:\n",
+        "    l.append([i,1])\n",
+        "    flag = False\n",
+        "tup = []\n",
+        "for i in l:\n",
+        "  tup.append((i[0],i[1]))\n",
+        "print(tup)\n",
+        "\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[('a', 6), ('b', 4), ('c', 4)]\n",
-            "{'a': 6, 'b': 4, 'c': 4}\n"
+            "[('a', 10), ('b', 6), ('c', 9)]\n"
           ],
           "name": "stdout"
         }
