--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPxPF9SwshEvnrU+azSW26w",
+      "authorship_tag": "ABX9TyP//SAZthEsY7AjNvNOWvzB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -829,7 +829,10 @@
         "  print(slicedList)\n",
         "\n",
         "listt=[2,3,2,3,43,4]\n",
+        "\n",
+        "\n",
         "slicing(listt,3,6)\n",
+        "\n",
         "insert(listt,4,3333)\n",
         "add(listt,444)\n",
         "\n"
@@ -936,7 +939,17 @@
         "outputId": "ef28bce3-660e-443b-a22c-b4f9d837f19b"
       },
       "source": [
-        ""
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -984,13 +997,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8ccb7231-b594-4c9d-ddb5-b88462684dba"
+        "outputId": "aa894643-d851-44ef-f892-218f9efb3937"
       },
       "source": [
-        "conc_names=\"\"\n",
-        "conc_ages=\"\"\n",
-        "conc_address=\"\"\n",
-        "conc_college=\"\"\n",
+        "conc_names,conc_ages,conc_address,conc_colleges=\"\",\"\",\"\",\"\"\n",
+        "\n",
         "\n",
         "for i in range(int(input(\"enter the no of students      \"))):\n",
         "  name=input(\"enter the name of student no     \")\n",
@@ -1002,36 +1013,27 @@
         "  conc_address+=address\n",
         "  conc_colleges+=college\n",
         "\n",
-        "print(\"/n\")  \n",
+        "\n",
         "print(conc_names)\n",
         "print(conc_ages)\n",
         "print(conc_address)\n",
         "print(conc_colleges)\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "enter the no of students      3\n",
-            "enter the name of student no     student1\n",
-            "enter the age       18\n",
-            "enter the  address      address1\n",
-            "enter the college     college1\n",
-            "enter the name of student no     student2\n",
-            "enter the age       18\n",
-            "enter the  address      address2\n",
-            "enter the college     college2\n",
-            "enter the name of student no     student3\n",
-            "enter the age       18\n",
-            "enter the  address      address\n",
-            "enter the college     college3\n",
-            "/n\n",
-            "student1student2student3\n",
-            "181818\n",
-            "address1address2address\n",
-            "dsgssdgcollege1college2college3college1college2college3\n"
+            "enter the no of students      1\n",
+            "enter the name of student no     name\n",
+            "enter the age       223\n",
+            "enter the  address      adree\n",
+            "enter the college     d\n",
+            "name\n",
+            "223\n",
+            "adree\n",
+            "d\n"
           ],
           "name": "stdout"
         }
@@ -1054,10 +1056,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jOfFNtR8sB3K",
-        "outputId": "c18db2e5-9bd2-446b-85cb-7a50a1450b90"
+        "outputId": "447dddfe-3cf3-4473-a1ba-5a48314833a1"
       },
       "source": [
-        "strn=\"aaaabbbcccccaaaaabbbcccca\"\n",
+        "\n",
+        "# strn=input()\n",
+        "\n",
+        "\n",
+        "\n",
         "# solution 1 using tuples \n",
         "\n",
         "\n",
@@ -1095,31 +1101,37 @@
         "\n",
         "# solution 3 using list\n",
         "\n",
-        "l = []\n",
+        "\n",
+        "# strn=\"aaaabbbcccccaaaaabbbcccca\"\n",
+        "# n=2\n",
+        "strn=input(\"enter the string\")\n",
+        "n=int(input(\"enter the number of values\"))\n",
+        "l,l1 = [],[]\n",
         "for i in strn:\n",
+        "  if(i==\" \"):\n",
+        "      continue\n",
         "  flag = False\n",
         "  for x in range(len(l)):\n",
         "    if i in l[x][0]:\n",
-        "      #print(\"x = \",x)\n",
         "      l[x][1] += 1\n",
         "      flag = True\n",
         "  if not flag:\n",
         "    l.append([i,1])\n",
         "    flag = False\n",
+        "l1=sorted(l,key=lambda x:x[1],reverse=True)\n",
         "tup = []\n",
-        "for i in l:\n",
-        "  tup.append((i[0],i[1]))\n",
-        "print(tup)\n",
-        "\n",
-        "\n",
-        "\n"
+        "for i in range(n):\n",
+        "  tup.append((l1[i][0],l1[i][1]))\n",
+        "print(tup)"
       ],
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[('a', 10), ('b', 6), ('c', 9)]\n"
+            "enter the stringnaveen karthik redddy\n",
+            "enter the number of values4\n",
+            "[('e', 3), ('d', 3), ('n', 2), ('a', 2)]\n"
           ],
           "name": "stdout"
         }
