--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP//SAZthEsY7AjNvNOWvzB",
+      "authorship_tag": "ABX9TyMx51wO2PSMCJunjKNyvxPj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -997,43 +997,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "aa894643-d851-44ef-f892-218f9efb3937"
+        "outputId": "661aeb7e-305b-4ba7-8868-848918b4ccf8"
       },
       "source": [
-        "conc_names,conc_ages,conc_address,conc_colleges=\"\",\"\",\"\",\"\"\n",
-        "\n",
+        "t=()\n",
         "\n",
         "for i in range(int(input(\"enter the no of students      \"))):\n",
-        "  name=input(\"enter the name of student no     \")\n",
-        "  age=input(\"enter the age       \")\n",
-        "  address=input(\"enter the  address      \" )\n",
-        "  college=input(\"enter the college     \")\n",
-        "  conc_names+=name\n",
-        "  conc_ages+=age\n",
-        "  conc_address+=address\n",
-        "  conc_colleges+=college\n",
+        "  t+=eval(input(\"enter the details of student\"))\n",
+        "print(t)\n",
         "\n",
-        "\n",
-        "print(conc_names)\n",
-        "print(conc_ages)\n",
-        "print(conc_address)\n",
-        "print(conc_colleges)\n",
-        "\n"
+        "# (\"name\",42,\"add\",\"gvp\")\n",
+        "# (\"name1\",12,\"adre\",\"gvpce\")"
       ],
-      "execution_count": 16,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "enter the no of students      1\n",
-            "enter the name of student no     name\n",
-            "enter the age       223\n",
-            "enter the  address      adree\n",
-            "enter the college     d\n",
-            "name\n",
-            "223\n",
-            "adree\n",
-            "d\n"
+            "enter the no of students      2\n",
+            "enter the details of student(\"name\",42,\"add\",\"gvp\")\n",
+            "enter the details of student(\"name1\",12,\"adre\",\"gvpce\")\n",
+            "('name', 42, 'add', 'gvp', 'name1', 12, 'adre', 'gvpce')\n"
           ],
           "name": "stdout"
         }
@@ -1059,13 +1043,9 @@
         "outputId": "447dddfe-3cf3-4473-a1ba-5a48314833a1"
       },
       "source": [
-        "\n",
         "# strn=input()\n",
         "\n",
-        "\n",
-        "\n",
         "# solution 1 using tuples \n",
-        "\n",
         "\n",
         "# temp=strn[0]\n",
         "# count=0\n",
@@ -1100,10 +1080,10 @@
         "\n",
         "\n",
         "# solution 3 using list\n",
-        "\n",
-        "\n",
         "# strn=\"aaaabbbcccccaaaaabbbcccca\"\n",
         "# n=2\n",
+        "\n",
+        "\n",
         "strn=input(\"enter the string\")\n",
         "n=int(input(\"enter the number of values\"))\n",
         "l,l1 = [],[]\n",
